force-app/main/default/objects/Contact/fields/Age_f__c.field-meta.xml
<CustomField>
    <fullName>Age_f__c</fullName>
    <formula>FLOOR((TODAY() - Birthdate) / 365.25)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Age</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>