force-app/main/default/objects/Contact/fields/GitHub_u__c.field-meta.xml
<CustomField>
    <fullName>GitHub_u__c</fullName>
    <label>GitHub</label>
    <type>Url</type>
</CustomField>