force-app/main/default/objects/Contact/fields/LinkedIn_u__c.field-meta.xml
<CustomField>
    <fullName>LinkedIn_u__c</fullName>
    <label>LinkedIn</label>
    <type>Url</type>
</CustomField>