force-app/main/default/objects/Contact/fields/Website_url__c.field-meta.xml
<CustomField>
    <fullName>Website_url__c</fullName>
    <label>Website</label>
    <type>Url</type>
</CustomField>